--- a/cloud_functions/functions/package.json
+++ b/cloud_functions/functions/package.json
@@ -14,14 +14,15 @@
   },
   "main": "lib/index.js",
   "dependencies": {
+    "@types/node": "^10.14.21",
     "firebase-admin": "^8.10.0",
-    "firebase-functions": "^3.6.1",
-    "@types/node": "^10.14.21"
+    "firebase-functions": "^3.16.0",
+    "firebase-messaging": "^1.0.6"
   },
   "devDependencies": {
+    "firebase-functions-test": "^0.2.0",
     "tslint": "^5.12.0",
-    "typescript": "^3.8.0",
-    "firebase-functions-test": "^0.2.0"
+    "typescript": "^3.8.0"
   },
   "private": true
 }
