--- a/pwa/public/manifest.json
+++ b/pwa/public/manifest.json
@@ -13,7 +13,7 @@
   "start_url": "/",
   "gcm_sender_id": "817393858499",
   "display": "standalone",
-  "theme_color": "#000000",
+  "theme_color": "#f0975b",
   "background_color": "#ffffff",
   "enctype": "application/x-www-form-urlencoded"
 }
