--- a/pwa/app.yaml
+++ b/pwa/app.yaml
@@ -3,17 +3,20 @@ runtime: python38
 handlers:
   # Frontend
   - url: /static
+    secure: always
     static_dir: build/static
     http_headers:
       Access-Control-Allow-Origin: "*"
 
   - url: /
+    secure: always
     static_files: build/index.html
     upload: build/index.html
     http_headers:
       Access-Control-Allow-Origin: "*"
 
   - url: /firebase-messaging-sw.js
+    secure: always
     static_files: build/firebase-messaging-sw.js
     upload: build/firebase-messaging-sw.js
     mime_type: "text/javascript"
@@ -21,6 +24,7 @@ handlers:
       Access-Control-Allow-Origin: "*"
 
   - url: /(.*\.(json|ico|js|html|png))$
+    secure: always
     static_files: build/\1
     upload: build/.*\.(json|ico|js|html|png)$
     http_headers:
